--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #333;
+    background-color: #89CFF0;
     color: white;
     padding: 1em;
     text-align: center;
