--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,12 +1,17 @@
-.button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    background-color: #007bff;
-    color: white;
+button {
+    padding: 1em 2em;
+    font-size: 1rem;
+    margin: 1em;
     cursor: pointer;
+    border-radius: 5px;
+    border: none;
 }
 
-.button:hover {
-    background-color: #0056b3;
+button:hover {
+    background-color: #61dafb;
+    color: white;
+}
+
+button:active {
+    transform: scale(0.98);
 }
