--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .header {
-    background-color: #333;
+    background-color: #89CFF0;
     color: white;
     padding: 1em;
     text-align: center;
 }
 
 .header nav a {
-    color: #61dafb;
+    color: white;
     margin: 0 10px;
     text-decoration: none;
 }
