--- a/src/styles/QuizQuestion.css
+++ b/src/styles/QuizQuestion.css
@@ -1,14 +1,13 @@
 .quiz-question {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .option-button {
     padding: 10px 20px;
     margin: 5px;
-    border: none;
+    font-size: 1rem;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
     transition: background-color 0.3s ease;
 }
 
@@ -45,17 +44,16 @@
 }
 
 .quiz-question button {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    background-color: #008cba;
-    color: white;
-    border: none;
-    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 1rem;
     cursor: pointer;
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: #FF69B4;
+    color: white;
     transition: background-color 0.3s;
 }
 
 .quiz-question button:hover {
-    background-color: #005f6b;
+    background-color: #ff1e5a;
 }
