--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
     color: white;
     padding: 1em;
     text-align: center;
-    position: fixed;
+    position: static;
     bottom: 0;
     width: 100%;
 }
