--- a/src/components/QuestionNavigation/QuestionNavigation.css
+++ b/src/components/QuestionNavigation/QuestionNavigation.css
@@ -1,47 +1,64 @@
 .question-navigation {
     padding: 10px;
-    max-width: 200px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;  /* Stack items vertically */
+    align-self: center;
+    justify-content: center;
+    height: auto;  /* Allow height to adjust based on content */
+    position: static;
+    box-sizing: border-box;
+    gap: 20px;
 }
 
 .question-navigation.hidden .grid-container {
     display: none; /* Only hide the grid container */
+
 }
 
 .question-navigation.hidden .toggle-button {
     display: block; /* Ensure the button is always visible */
 }
 
-.toggle-button {
-    margin-bottom: 10px;
-    padding: 8px 12px;
+/* Wrapper for buttons */
+.button-wrapper {
+    display: flex;
+    flex-direction: column; /* Align buttons horizontally */
+    justify-content: start; /* Center horizontally */
+    align-items: start; /* Center vertically */
+    position: static;
+}
+
+/* Common button style */
+.button, .toggle-button {
+    width: 120px; /* Set a fixed width for uniform size */
+    height: 40px; /* Set a fixed height for uniform size */
+    padding: 0; /* Ensure padding doesn't distort size */
     border: none;
     background-color: #007bff;
     color: white;
     border-radius: 4px;
     cursor: pointer;
-    display: block;
     text-align: center;
+    font-size: 14px; /* Adjust font size */
 }
 
-.toggle-button:hover {
+.button:hover, .toggle-button:hover  {
     background-color: #0056b3;
 }
 
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr); /* 5 items per row */
+    grid-template-columns: repeat(10, 1fr); /* 10 items per row */
     gap: 10px;
+    margin-top: 20px;
 }
 
 .grid-item {
     text-align: center;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     background-color: #f9f9f9;
     cursor: pointer;
 }
@@ -55,3 +72,6 @@
     color: white;
     background-color: #007bff;
 }
+
+
+
