--- a/src/styles/QuizQuestion.css
+++ b/src/styles/QuizQuestion.css
@@ -1,5 +1,13 @@
 .quiz-question {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Center vertically */
+    height: 20vh; /* Make the container fill the full height of the viewport */
+    padding: 20px; /* Optional padding */
+    position: relative;
+    box-sizing: border-box;
 }
 
 .option-button {
@@ -49,11 +57,10 @@
     cursor: pointer;
     margin-top: 20px;
     border-radius: 5px;
-    background-color: #FF69B4;
-    color: white;
-    transition: background-color 0.3s;
+    background-color: #FFFAA0;
+    color: black;
 }
 
 .quiz-question button:hover {
-    background-color: #ff1e5a;
+    background-color: #dbd67b;
 }
